<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CaloriesCalculatorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="290dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/header"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="300dp"
            android:layout_marginTop="40dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView android:text="@string/enter_your_weight" />

                <EditText
                    android:id="@+id/weight_input"
                    android:inputType="number"
                    android:minWidth="200dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center" >

                <TextView android:text="@string/enter_your_height" />

                <EditText
                    android:id="@+id/height_input"
                    android:inputType="number"
                    android:minWidth="200dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:text="@string/enter_you_age"
                    android:textAlignment="textStart" />

                <EditText
                    android:id="@+id/age_input"
                    android:inputType="number"
                    android:minWidth="200dp" />
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/bmr_output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/basal_metabolic_rate" />

        <TextView
            android:id="@+id/lose_weight_output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/calories_to_lose_weight" />

        <TextView
            android:id="@+id/gain_weight_output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/calories_to_gain_weight" />
        <Button
            android:id="@+id/calc_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:text="@string/btn_calc" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>